Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-701

blocks can be deleted before associated metadata is flushed

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Private Beta
    • None
    • tablet
    • None

    Description

      On the ITBLL cluster we experienced a data loss where several rowsets worth of data blocks went missing. This caused the tablet to fail to bootstrap when the TS was restarted.

      After log-spelunking it turns out there is a subtle race when multiple concurrent compactions to a tablet complete at exactly the same time, and then the server crashes.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: